# pointcloud_playground

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/clustering/: euclidean_clusters.cpp  euclidean_clusters_gpu.cpp
examples/example1/: main.cpp
examples/filters/: filter_cloud.cpp  passthrough_filter.cpp
examples/grabcut/: grabcut.cpp
examples/segmentation/: cylinder_segmentation.cpp  mincut-segmentation.cpp  segmentation.cpp
examples/viewer/: viewer.cpp
include/pointcloud_playground/: Visualizer.h  Visualizer.inl
